{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 1009,
  "lineage": "c7c98ea0-712f-c751-ea86-8fe222949661",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jumpv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:331375652680:instance/i-06150a23bca70968a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a23947251a793805",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06150a23bca70968a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "jumpv",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0398442e3ddcb419e",
            "private_dns": "ip-10-0-2-30.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.30",
            "public_ip": "44.192.99.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a23947251a793805",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0db6ade4bd0eef721"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ef92caf18903d20",
            "tags": {
              "Name": "jumpv"
            },
            "tags_all": {
              "Name": "jumpv"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0db6ade4bd0eef721"
            ]
          },
          "dependencies": [
            "aws_key_pair.jumpv_key",
            "aws_security_group.jumpv",
            "aws_subnet.us-east-1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jumpv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331375652680:internet-gateway/igw-0c6960aac57aaef4f",
            "id": "igw-0c6960aac57aaef4f",
            "owner_id": "331375652680",
            "tags": {
              "Name": "Internet-Gateway"
            },
            "tags_all": {
              "Name": "Internet-Gateway"
            },
            "vpc_id": "vpc-020ee80326eb23a97"
          },
          "dependencies": [
            "aws_vpc.jumpv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "jumpv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:331375652680:loadbalancer/app/application-loadbalancer/43b2f9b114d9bd9d",
            "arn_suffix": "app/application-loadbalancer/43b2f9b114d9bd9d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "application-loadbalancer-196187094.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:331375652680:loadbalancer/app/application-loadbalancer/43b2f9b114d9bd9d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0db6ade4bd0eef721"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-030dc5be65af61b68"
              },
              {
                "subnet_id": "subnet-070b0dee8cb41b62e"
              },
              {
                "subnet_id": "subnet-07ef92caf18903d20"
              }
            ],
            "subnets": [
              "subnet-030dc5be65af61b68",
              "subnet-070b0dee8cb41b62e",
              "subnet-07ef92caf18903d20"
            ],
            "tags": {
              "Environment": "jumpv_prod"
            },
            "tags_all": {
              "Environment": "jumpv_prod"
            },
            "vpc_id": "vpc-020ee80326eb23a97",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.jumpv",
            "aws_subnet.us-east-1a",
            "aws_subnet.us-east-1b",
            "aws_subnet.us-east-1c",
            "aws_vpc.jumpv"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "webserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:331375652680:listener/app/application-loadbalancer/43b2f9b114d9bd9d/d9a340b138c39649",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:331375652680:targetgroup/jumpv-tg/d66f2db740baa88a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:331375652680:listener/app/application-loadbalancer/43b2f9b114d9bd9d/d9a340b138c39649",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:331375652680:loadbalancer/app/application-loadbalancer/43b2f9b114d9bd9d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.jumpv",
            "aws_lb_target_group.jumpv_tg",
            "aws_security_group.jumpv",
            "aws_subnet.us-east-1a",
            "aws_subnet.us-east-1b",
            "aws_subnet.us-east-1c",
            "aws_vpc.jumpv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jumpv_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:331375652680:targetgroup/jumpv-tg/d66f2db740baa88a",
            "arn_suffix": "targetgroup/jumpv-tg/d66f2db740baa88a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:331375652680:targetgroup/jumpv-tg/d66f2db740baa88a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jumpv-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "jumpv_prod"
            },
            "tags_all": {
              "Environment": "jumpv_prod"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-020ee80326eb23a97"
          },
          "dependencies": [
            "aws_lb.jumpv",
            "aws_security_group.jumpv",
            "aws_subnet.us-east-1a",
            "aws_subnet.us-east-1b",
            "aws_subnet.us-east-1c",
            "aws_vpc.jumpv"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jumpv-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:331375652680:targetgroup/jumpv-tg/d66f2db740baa88a-20230608060903294300000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:331375652680:targetgroup/jumpv-tg/d66f2db740baa88a",
            "target_id": "i-06150a23bca70968a"
          },
          "dependencies": [
            "aws_instance.jumpv",
            "aws_key_pair.jumpv_key",
            "aws_lb_target_group.jumpv_tg",
            "aws_security_group.jumpv",
            "aws_subnet.us-east-1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jumpv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331375652680:route-table/rtb-007b2f99ab41ddf34",
            "id": "rtb-007b2f99ab41ddf34",
            "owner_id": "331375652680",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c6960aac57aaef4f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-020ee80326eb23a97"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jumpv",
            "aws_vpc.jumpv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331375652680:route-table/rtb-06ebd9fed60d2f4dc",
            "id": "rtb-06ebd9fed60d2f4dc",
            "owner_id": "331375652680",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "jumpv-rt"
            },
            "tags_all": {
              "Name": "jumpv-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-020ee80326eb23a97"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jumpv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jumpv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0016eca79146f0b64",
            "route_table_id": "rtb-007b2f99ab41ddf34",
            "subnet_id": "subnet-030dc5be65af61b68"
          },
          "dependencies": [
            "aws_internet_gateway.jumpv",
            "aws_route_table.jumpv",
            "aws_subnet.us-east-1a",
            "aws_vpc.jumpv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jumpv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b0052994256ba0c",
            "route_table_id": "rtb-007b2f99ab41ddf34",
            "subnet_id": "subnet-07ef92caf18903d20"
          },
          "dependencies": [
            "aws_internet_gateway.jumpv",
            "aws_route_table.jumpv",
            "aws_subnet.us-east-1b",
            "aws_vpc.jumpv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jumpv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061bdfdb9fabc96e0",
            "route_table_id": "rtb-007b2f99ab41ddf34",
            "subnet_id": "subnet-070b0dee8cb41b62e"
          },
          "dependencies": [
            "aws_internet_gateway.jumpv",
            "aws_route_table.jumpv",
            "aws_subnet.us-east-1c",
            "aws_vpc.jumpv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jumpv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331375652680:security-group/sg-0db6ade4bd0eef721",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db6ade4bd0eef721",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1048
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 20,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 21
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 990,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 990
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTPS connections",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming myqsl connections",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "jumpv-sg20230608050239651800000001",
            "name_prefix": "jumpv-sg",
            "owner_id": "331375652680",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-020ee80326eb23a97"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jumpv"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331375652680:subnet/subnet-030dc5be65af61b68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030dc5be65af61b68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "331375652680",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-020ee80326eb23a97"
          },
          "dependencies": [
            "aws_vpc.jumpv"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331375652680:subnet/subnet-07ef92caf18903d20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ef92caf18903d20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "331375652680",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-020ee80326eb23a97"
          },
          "dependencies": [
            "aws_vpc.jumpv"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-east-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331375652680:subnet/subnet-070b0dee8cb41b62e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070b0dee8cb41b62e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "331375652680",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-020ee80326eb23a97"
          },
          "dependencies": [
            "aws_vpc.jumpv"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jumpv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331375652680:vpc/vpc-020ee80326eb23a97",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e8726adeacdfaa4d",
            "default_route_table_id": "rtb-09b30e33f77131968",
            "default_security_group_id": "sg-0adaf8aac5b9f2d13",
            "dhcp_options_id": "dopt-0c5018bd7ecad6413",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-020ee80326eb23a97",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09b30e33f77131968",
            "owner_id": "331375652680",
            "tags": {
              "Name": "jumpv"
            },
            "tags_all": {
              "Name": "jumpv"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}